k8/argocd/rollout/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: springweb
  name: springweb
spec:
  # replicas: 5
  strategy:
    canary:
      canaryService: springweb-canary  # required
      stableService: springweb-stable  # required
      trafficRouting:
        nginx:
          stableIngress: springweb-ingress  # required
          # annotationPrefix: customingress.nginx.ingress.kubernetes.io # optional
          additionalIngressAnnotations:   # optional
            canary-by-header: X-Canary
            canary-by-header-value: iwantsit
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: springweb
  template:
    metadata:
      labels:
        app: springweb
    spec:
      containers:
        - image: asia-south1-docker.pkg.dev/tech-rnd-project/niveus/springweb:1.0.0
          name: springweb
          imagePullPolicy: Always
          volumeMounts:
          ports:
            - containerPort: 5677
          resources:
            requests:
              memory: 100Mi
              cpu: 25m
            limits:
              memory: 256Mi
              cpu: 100m
      imagePullSecrets:
           - name: gcr-io
