k8/argocd/rollout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springweb-stable
spec:
  type: ClusterIP
  selector:
    app: springweb
  ports:
    - protocol: TCP
      port: 5677
      targetPort: 5677
---
apiVersion: v1
kind: Service
metadata:
  name: springweb-canary
spec:
  type: ClusterIP
  selector:
    app: springweb
  ports:
    - protocol: TCP
      port: 5677
      targetPort: 5677
